--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,8 @@ os: linux
 files:
   - source: /
     destination: /home/ec2-user/aws-github-pipeline
+    overwrite: true
+file_exists_behavior: OVERWRITE    
 hooks:
 # ApplicationStop:
 # DownloadBundle:
